--- a/GrpcServicedemo/GrpcServicedemo/appsettings.json
+++ b/GrpcServicedemo/GrpcServicedemo/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "AppDb": "Server=DESKTOP-O3NQBKB;Database=Grpcdemo;uid=sa;pwd=123456;"
+    "AppDb": "Server=DESKTOP-J6KKR6V;Database=Grpcdemo;uid=sa;pwd=admin@123;"
   }
 
 }
